tests/macros/duplicate/plugin.stderr
error: duplicate option `plugin`
 --> $DIR/plugin.rs:4:9
  |
4 |         plugin: todo!(),
  |         ^^^^^^
