tests/macros/duplicate/plugin.rs
fn main() {
    let q = inquisition::questions![plugin {
        plugin: todo!(),
        plugin: todo!(),
    }];
}
